--- a/youtube.html
+++ b/youtube.html
@@ -34,5 +34,57 @@
             <label>Sign in</label>
         </div>
         </div>
+        <div id = "sidebar">
+            <div id = "s1">
+                <i class='bx bxs-home'></i>
+                Home
+            </div>
+            <div id = "s2">
+                <i class='bx bx-credit-card-alt'></i>
+                Subscriptions
+            </div>
+            <div id = "s3">
+                <i class='bx bx-screenshot' ></i>
+                Shorts
+            </div>
+            <hr>
+            <div id= "s4">
+                <i class='bx bx-user-circle' ></i>
+                You
+            </div>
+            <div id = "s5">
+                <i class='bx bx-history' ></i>
+                History
+            </div>
+            <hr>
+            <br>
+            <label id = "l1">Sign in to like videos, comment, and subscribe.</label>
+            <div id = "sign">
+                <i class='bx bx-user-circle' ></i>
+                <label>Sign in</label>
+            </div>
+            <hr>
+            <h5>Explore</h5>
+            <div id = "s6">
+                <i class='bx bx-trending-up' ></i>
+                Trending
+            </div>
+            <div id = "s7">
+                <i class='bx bx-shopping-bag' ></i>
+                Shopping
+            </div>
+            <div id = "s8">
+                <i class='bx bx-music' ></i>
+                Music
+            </div>
+            <div id = "s9">
+                <i class='bx bx-movie-play' ></i>
+                Movies
+            </div>
+            <div id = "s10">
+                <i class='bx bx-cricket-ball'></i>
+                Sports
+            </div>
+        </div>
 </body>
 </html>
