--- a/youtube.html
+++ b/youtube.html
@@ -34,6 +34,7 @@
             <label>Sign in</label>
         </div>
         </div>
+        <div id = "center">
         <div id = "sidebar">
             <div id = "s1">
                 <i class='bx bxs-home'></i>
@@ -85,6 +86,42 @@
                 <i class='bx bx-cricket-ball'></i>
                 Sports
             </div>
+        </div>
+        <div id = "header">
+            <div id = "f1">
+                All
+            </div>
+            <div id = "f2">
+                Music
+            </div>
+            <div id = "f3">
+                Gaming
+            </div>
+            <div id = "f4">
+                Funk
+            </div>
+            <div id = "f5">
+                Indian pop music
+            </div>
+            <div id = "f6">
+                Electro house music
+            </div>
+            <div id = "f7">
+                Live
+            </div>
+            <div id = "f8">
+                Synthpop
+            </div>
+            <div id = "f9">
+                Tamil Cinema
+            </div>
+            <div id = "f10">
+                Reggaeton
+            </div>
+            <div id = "f11">
+                Grandmaster chess title
+            </div>
+        </div>
         </div>
 </body>
 </html>
