added the content having first row

--- a/youtube.html
+++ b/youtube.html
@@ -88,6 +88,7 @@
             </div>
         </div>
         <div id = "header">
+            <div id = "cat">
             <div id = "f1">
                 All
             </div>
@@ -121,6 +122,18 @@
             <div id = "f11">
                 Grandmaster chess title
             </div>
+            </div>
+            <div id = "content">
+                <div id = "c1">
+                </div>
+                <div id = "c2">
+                </div>
+                <div id = "c3">
+                </div>
+                </div>
+                <div id = "c4">
+
+                </div>
         </div>
         </div>
 </body>
