added first video discription

--- a/youtube.html
+++ b/youtube.html
@@ -124,14 +124,24 @@
             </div>
             </div>
             <div id = "content">
+                <div id = "row">
                 <div id = "c1">
+                    <div id = "box1">
+                    <div id = "circle1">
+                    </div>
+                    <label>College Main EXAM PAPER Ka Twist | Sharman Joshi, Tusshar Kapoor | SCENE</label>
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                    </div>
+                    <div id = "box2">
+                        <label>Shemaroo Comedy</label><br>
+                        <label>26M views • 3 years Ago</label>
+                    </div>
                 </div>
                 <div id = "c2">
                 </div>
                 <div id = "c3">
                 </div>
                 </div>
-                <div id = "c4">
                 </div>
         </div>
         </div>
